--- a/arcgis-maps/.project
+++ b/arcgis-maps/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>arcgis-maps</name>
+	<name>maps-app</name>
 	<comment></comment>
 	<projects>
 	</projects>
