--- a/arcgis-maps/AndroidManifest.xml
+++ b/arcgis-maps/AndroidManifest.xml
@@ -16,16 +16,14 @@
         android:glEsVersion="0x00020000"
         android:required="true" />
 
-    
-
-<application
+    <application
         android:icon="@drawable/basemaps_launcher"
-        android:label="@string/app_name" 
+        android:label="@string/app_name"
         android:uiOptions="splitActionBarWhenNarrow" >
         <activity
-            android:name="com.arcgis.android.app.map.MapsApp"
-            android:label="@string/app_name" 
-            android:configChanges="orientation" >
+            android:name="com.esri.android.rt.map.MapsApp"
+            android:configChanges="orientation"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -33,9 +31,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.arcgis.android.app.map.DirectionsActivity"
-            android:label="@string/title_activity_directions" 
-            android:configChanges="orientation" >
+            android:name="com.esri.android.rt.map.DirectionsActivity"
+            android:configChanges="orientation"
+            android:label="@string/title_activity_directions" >
         </activity>
     </application>
 
