--- a/maps-app/AndroidManifest.xml
+++ b/maps-app/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:uiOptions="splitActionBarWhenNarrow" >
         <activity
             android:name="com.esri.android.rt.map.MapsApp"
-            android:configChanges="orientation"
+            android:configChanges="orientation|screenSize"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
