--- a/maps-app/AndroidManifest.xml
+++ b/maps-app/AndroidManifest.xml
@@ -19,7 +19,8 @@
     <application
         android:icon="@drawable/basemaps_launcher"
         android:label="@string/app_name"
-        android:uiOptions="splitActionBarWhenNarrow" >
+        android:uiOptions="splitActionBarWhenNarrow"
+        android:allowBackup="true" >
         <activity
             android:name="com.esri.android.rt.map.MapsApp"
             android:configChanges="orientation|screenSize"
