--- a/maps-app/AndroidManifest.xml
+++ b/maps-app/AndroidManifest.xml
@@ -20,9 +20,10 @@
         android:allowBackup="true"
         android:icon="@drawable/basemaps_launcher"
         android:label="@string/app_name"
-        android:uiOptions="splitActionBarWhenNarrow" >
+        android:uiOptions="splitActionBarWhenNarrow"
+        android:theme="@style/AppTheme">
         <activity
-            android:name="com.esri.android.mapsapp.map.MapsAppActivity"
+            android:name="com.esri.android.mapsapp.MapsAppActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name" >
             <intent-filter>
@@ -31,6 +32,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name="com.esri.android.mapsapp.account.SignInActivity"
+            android:label="@string/title_sign_in_activity"
+            android:launchMode="standard"
+            android:uiOptions="splitActionBarWhenNarrow"
+            android:windowSoftInputMode="adjustResize" />
     </application>
 
 </manifest>
