--- a/maps-app/AndroidManifest.xml
+++ b/maps-app/AndroidManifest.xml
@@ -20,8 +20,8 @@
         android:allowBackup="true"
         android:icon="@drawable/basemaps_launcher"
         android:label="@string/app_name"
-        android:uiOptions="splitActionBarWhenNarrow"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:uiOptions="splitActionBarWhenNarrow" >
         <activity
             android:name="com.esri.android.mapsapp.MapsAppActivity"
             android:configChanges="orientation|screenSize"
@@ -32,7 +32,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
             android:name="com.esri.android.mapsapp.account.SignInActivity"
             android:label="@string/title_sign_in_activity"
