--- a/maps-app/AndroidManifest.xml
+++ b/maps-app/AndroidManifest.xml
@@ -20,8 +20,7 @@
         android:allowBackup="true"
         android:icon="@drawable/basemaps_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:uiOptions="splitActionBarWhenNarrow" >
+        android:theme="@style/AppTheme" >
         <activity
             android:name="com.esri.android.mapsapp.MapsAppActivity"
             android:configChanges="orientation|screenSize"
