--- a/maps-app/build.gradle
+++ b/maps-app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
+    compileSdkVersion 22
     buildToolsVersion "21.1.2"
 
     defaultConfig {
         applicationId "com.esri.android.mapsapp"
         minSdkVersion 15
-        targetSdkVersion 19
+        targetSdkVersion 22
     }
 
     packagingOptions{
@@ -28,7 +28,7 @@ dependencies {
     // android support libraries
     compile 'com.android.support:support-v4:19.1.0'
     // ArcGIS Android 10.2.5 API
-    compile 'com.esri.arcgis.android:arcgis-android:10.2.5'
+    compile 'com.esri.arcgis.android:arcgis-android:10.2.6-2'
     // square libs
     compile 'com.jakewharton:butterknife:6.1.0'
 }
