--- a/maps-app/build.gradle
+++ b/maps-app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     // android support libraries
     compile 'com.android.support:support-v4:22.2.0'
     // ArcGIS Android 10.2.5 API
-    compile 'com.esri.arcgis.android:arcgis-android:10.2.6-2'
+    compile 'com.esri.arcgis.android:arcgis-android:10.2.7'
     // square libs
     compile 'com.jakewharton:butterknife:6.1.0'
 }
