--- a/maps-app/build.gradle
+++ b/maps-app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 23
+    buildToolsVersion '23.0.2'
 
     defaultConfig {
         applicationId "com.esri.android.mapsapp"
@@ -26,7 +26,8 @@ android {
 
 dependencies {
     // android support libraries
-    compile 'com.android.support:support-v4:22.2.0'
+    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.1.1'
     // ArcGIS Android 10.2.5 API
     compile 'com.esri.arcgis.android:arcgis-android:10.2.7'
     // square libs
