--- a/maps-app/build.gradle
+++ b/maps-app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     // android support libraries
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:design:23.1.1'
     // ArcGIS Android 10.2.5 API
     compile 'com.esri.arcgis.android:arcgis-android:10.2.7'
     // square libs
