--- a/maps-app/build.gradle
+++ b/maps-app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.esri.android.mapsapp"
-        minSdkVersion 15
+        minSdkVersion 17
         targetSdkVersion 23
     }
 
@@ -28,9 +28,10 @@ dependencies {
     // android support libraries
     compile 'com.android.support:support-v4:23.2.1'
     compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.android.support:cardview-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
     // ArcGIS Android 10.2.7 API
-    compile 'com.esri.arcgis.android:arcgis-android:10.2.7'
+    compile 'com.esri.arcgisruntime:arcgis-android:100.0.0-beta-2'
     // square libs
     compile 'com.jakewharton:butterknife:6.1.0'
 }
