--- a/maps-app/build.gradle
+++ b/maps-app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
 
-    // ArcGIS Android 10.2.7 API
+    // ArcGIS Android API
     compile 'com.esri.arcgisruntime:arcgis-android:100.0.0-beta-2'
     // square libs
     compile 'com.jakewharton:butterknife:6.1.0'
