Improved quality of user experience.
Added messaging for failed login attempts,  bad URLs, and canceled
authorization attempts.  Added back button functionality for fragment
displaying web maps.  Remove open street map from query for base maps.

--- a/maps-app/build.gradle
+++ b/maps-app/build.gradle
@@ -23,6 +23,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+    useLibrary 'org.apache.http.legacy'
 }
 
 dependencies {
@@ -48,4 +49,6 @@ dependencies {
     }
     // Robotium dependencies
     androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.5.4'
+
+    compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
 }
