Changed the way base maps are retrieved from the server and persist them locally rather than retrieving each time.

--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ allprojects {
     repositories {
         jcenter()
         maven {
-            url 'http://esri.bintray.com/arcgis'
+            url 'http://android:8080/artifactory/arcgis'
         }
     }
 }
