--- a/maps-app/build.gradle
+++ b/maps-app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '23.0.2'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "com.esri.android.mapsapp"
-        minSdkVersion 15
-        targetSdkVersion 23
+        minSdkVersion 16
+        targetSdkVersion 25
     }
 
     packagingOptions{
@@ -26,11 +26,11 @@ android {
 
 dependencies {
     // android support libraries
-    compile 'com.android.support:support-v4:23.3.0'
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.android.support:design:23.3.0'
+    compile 'com.android.support:support-v4:25.0.1'
+    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:design:25.0.1'
     // ArcGIS Android 10.2.7 API
-    compile 'com.esri.arcgis.android:arcgis-android:10.2.7'
+    compile 'com.esri.arcgis.android:arcgis-android:10.2.8-1'
     // square libs
     compile 'com.jakewharton:butterknife:6.1.0'
 }
