Applied most recent build (1528) and added OAuth support using same pattern as in the createsavemap sample

--- a/maps-app/src/main/AndroidManifest.xml
+++ b/maps-app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
 
-                <data android:scheme="my-maps-app"/>
+                <data android:scheme="my-ags-app"/>
             </intent-filter>
         </activity>
     </application>
