--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven {
-            url 'http://android:8080/artifactory/arcgis'
-        }
+        maven{ url 'https://esri.bintray.com/arcgis' }
     }
 }
 // Define versions in a single place
