--- a/maps-app/build.gradle
+++ b/maps-app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.0'
+
 
     defaultConfig {
         applicationId "com.esri.android.mapsapp"
@@ -28,15 +28,15 @@ android {
 
 dependencies {
     // android support libraries
-    compile 'com.android.support:support-v4:25.0.1'
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.android.support:cardview-v7:25.0.1'
-    compile 'com.android.support:design:25.0.1'
+    implementation 'com.android.support:support-v4:25.0.1'
+    implementation 'com.android.support:appcompat-v7:25.0.1'
+    implementation 'com.android.support:cardview-v7:25.0.1'
+    implementation 'com.android.support:design:25.0.1'
 
     // ArcGIS Android API
-    compile 'com.esri.arcgisruntime:arcgis-android:100.1.0'
+    implementation 'com.esri.arcgisruntime:arcgis-android:100.1.0'
     // square libs
-    compile 'com.jakewharton:butterknife:6.1.0'
+    implementation 'com.jakewharton:butterknife:6.1.0'
 
     // Android Testing Support Library's runner and rules
     androidTestCompile ("com.android.support.test:runner:$rootProject.ext.runnerVersion"){
@@ -49,5 +49,5 @@ dependencies {
     // Robotium dependencies
     androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.6.3'
 
-    compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
+    implementation group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
 }
