Various changes for V100.2.00
Removed second level README which is now replaced by the documentation on developers.com.  A link was added to the top-level README re-directing to the developer's site.
Changed launcher icon to use the SDK example icon.  Made changes to build.gradle to align with gradle 3.

--- a/maps-app/build.gradle
+++ b/maps-app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     // ArcGIS Android API
     implementation 'com.esri.arcgisruntime:arcgis-android:100.2.0-1911'
     // square libs
-    compile 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     // Android Testing Support Library's runner and rules
