--- a/maps-app/src/main/AndroidManifest.xml
+++ b/maps-app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <application
         android:windowSoftInputMode="adjustResize"
         android:allowBackup="true"
-        android:icon="@drawable/sdklabs_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
