--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
@@ -11,12 +12,12 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven { url 'https://maven.google.com' }
-     //   maven{ url 'https://esri.bintray.com/arcgis' }
+       maven{ url 'https://esri.bintray.com/arcgis' }
         maven {
             // url ’http://esri.bintray.com/arcgis'
             url 'http://android:8080/artifactory/arcgis'
         }
+        google()
     }
 }
 // Define versions in a single place
