--- a/maps-app/build.gradle
+++ b/maps-app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     implementation 'com.android.support:design:27.0.2'
 
     // ArcGIS Android API
-    implementation 'com.esri.arcgisruntime:arcgis-android:100.2.0-1911'
+    implementation 'com.esri.arcgisruntime:arcgis-android:100.2.0'
     // square libs
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
