--- a/maps-app/src/main/AndroidManifest.xml
+++ b/maps-app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.esri.arcgisruntime.opensourceapps.mapsapp.MapsAppActivity"
+            android:name=".MapsAppActivity"
             android:configChanges="orientation|screenSize"
             android:windowSoftInputMode="stateAlwaysHidden"
             android:label="@string/app_name">
@@ -27,7 +27,7 @@
         </activity>
 
         <activity
-            android:name="com.esri.arcgisruntime.opensourceapps.mapsapp.account.SignInActivity"
+            android:name=".account.SignInActivity"
             android:label="@string/title_sign_in_activity"
             android:launchMode="standard"
             android:uiOptions="splitActionBarWhenNarrow"
