--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven { url 'https://esri.bintray.com/arcgis' }
-        maven { url 'http://olympus.esri.com/artifactory/arcgisruntime-repo/' }
+        maven { url 'https://esri.jfrog.io/artifactory/arcgis' }
+        maven { url 'https://olympus.esri.com/artifactory/arcgisruntime-repo/' }
         google()
     }
 }
