Update versions - Android Gradle Plugin Version - 4.1.1 - Gradle version - 6.5 - Min SDK - 23 required by ArcGIS runtime - ArcGIS runtime version - 100.10.0 - test runner version - materialLibraryVersion - appcompatLibraryVersion

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Tue Feb 26 16:09:41 PST 2019
+#Tue Nov 24 15:37:38 PST 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.10.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-bin.zip
